--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaymon Pike's Portfolio</title>
+    <title>sample website names</title>
 </head>
 <body>
 <p>Hello World!</p>
+
+
+
+
 </body>
 </html>
