added width to pictures

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <p>My friend Ben got me into this game about a month ago; He actually streams on Twitch and you can find his channel <a href="https://www.twitch.tv/benrk_">here.</a> It is basically a marvel version of mortal combat and it has an extensive storyline to go through that has been constantly expanded over the last ten years, the ten year anniversary is actually next month. </p>
     <p> </p>
     <p>Below is an image of my top champions that I have on my team and I will give a brief explanation of the top 4. The first is Cosmic Ghost Rider, he is a high damage low health champion who inflicts burns and debuffs. Second is Juggernaut whose attacks make him unstoppable, not able to be stunned. The third is Agent Venom, who inflicts burns and bleeds with his guns. The fourth is Stryfe who can permanently stack more damage for the entire story chapter by using his special ability making him tanky but very high power.</p>
-    <img src="IMG_0269.PNG" alt="Jaymon's Top Champions">
+    <img src="IMG_0269.PNG" alt="Jaymon's Top Champions" style="width: 500px;">
     <p> </p>
 <p>Below is a view of the main screen where you can see that there are a lot of game modes available and they all offer unique rewards. The far left is the story progression, to the right of it there are event quests which are changed roughly every week. Beside that is Battlegrounds, which is a PvP (player versus player) game mode. Overall there is thousands of hours worth of content to play.</p>
-<img src="IMG_0270.PNG" alt="Main Screen MCOC">
+<img src="IMG_0270.PNG" alt="Main Screen MCOC" style="width: 500px;">
 <p> </p>
 <p>If you decide to give this game a try, there is a very helpful <a href="https://store.playcontestofchampions.com">website</a> called summoners market. There are daily free rewards you can claim here, and this website is directly linked to your account. Should you choose to spend money on the game, the deals on this website are also a lot better than in the game. Thank you for visiting and reading about one of my favorite games/hobbies.</p>
+<p> </p>
 </body>
 </html>
