--- a/index.html
+++ b/index.html
@@ -15,6 +15,49 @@
 <p>Below is a view of the main screen where you can see that there are a lot of game modes available and they all offer unique rewards. The far left is the story progression, to the right of it there are event quests which are changed roughly every week. Beside that is Battlegrounds, which is a PvP (player versus player) game mode. Overall there is thousands of hours worth of content to play.</p>
 <img src="IMG_0270.PNG" alt="Main Screen MCOC" style="width: 500px;">
 <p> </p>
+</style>
+</head>
+<body>
+
+<h2>Type Advantages</h2>
+
+<table>
+  <tr>
+    <th>Type</th>
+    <th>Advantage</th>
+    <th>Disadvantage</th>
+  </tr>
+  <tr>
+    <td>Science</td>
+    <td>Mystic</td>
+    <td>Skill</td>
+  </tr>
+  <tr>
+    <td>Mystic</td>
+    <td>Cosmic</td>
+    <td>Science</td>
+  </tr>
+  <tr>
+    <td>Tech</td>
+    <td>Mutant</td>
+    <td>Cosmic</td>
+  </tr>
+  <tr>
+    <td>Mutant</td>
+    <td>Skill</td>
+    <td>Tech</td>
+  </tr>
+  <tr>
+    <td>Skill</td>
+    <td>Science</td>
+    <td>Mutant</td>
+  </tr>
+  <tr>
+    <td>Cosmic</td>
+    <td>Tech</td>
+    <td>Mystic</td>
+  </tr>
+</table>
 <p>If you decide to give this game a try, there is a very helpful <a href="https://store.playcontestofchampions.com">website</a> called summoners market. There are daily free rewards you can claim here, and this website is directly linked to your account. Should you choose to spend money on the game, the deals on this website are also a lot better than in the game. Thank you for visiting and reading about one of my favorite games/hobbies.</p>
 <p> </p>
 </body>
